--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 					<div class="grid__item pos-10"><div class="grid__item-img" style="background-image:url(./img/img10.png);" class="hover"></div></div>
 				</div>
                 <h2 class="content__title no-select">
-					<span>Cảm ơn PHƯƠNG</span>
+					<span>CẢM ƠN PHƯƠNG</span>
 				</h2>
 				<h2 class="content__title no-select">
 					<span class="content__title-sub">vì đã cho mình cơ hội...để được bên bạn lần nữa♥</span>
