--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 					<span>Cảm ơn PHƯƠNG</span>
 				</h2>
 				<h2 class="content__title no-select">
-					<span class="content__title-sub">vì đã cho mình cơ hội...để được bên bạn lần nữa♥,một món quà vô giá</span>
+					<span class="content__title-sub">vì món quà vô giá...là cho mình được bên bạn lần nữa♥(31->+∞)</span>
 				</h2>
 			</div>
 		</main>
