--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 				</h2>
 				<h2 class="content__title no-select">
 					<span class="content__title-sub">vì món quà vô giá...là cho mình được bên bạn lần nữa♥(31->+∞)</span>
+					<span class="content__title-sub">vì món quà vô giá...là cho mình được bên bạn lần nữa♥(31->+∞)</span>
 				</h2>
 			</div>
 		</main>
