--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 					<span>Cảm ơn PHƯƠNG</span>
 				</h2>
 				<h2 class="content__title no-select">
-					<span class="content__title-sub">vì món quà vô giá...là cho mình được bên bạn lần nữa♥(31->+∞)</span>
-					<span class="content__title-sub">vì món quà vô giá...là cho mình được bên bạn lần nữa♥(31->+∞)</span>
+					<span class="content__title-sub">Vì món quà vô giá...là cho mình một động lực để thay đổi</span>
+					<span class="content__title-sub">Và cho phép mình được bên bạn lần nữa</span>
+					<span class="content__title-sub">Mình đặt cược vào bạn và vào câu chuyện mà tụi mình sẽ viết nên♥</span>
+					<span class="content__title-sub">                     (31->+∞)                        </span>
 				</h2>
 			</div>
 		</main>
