--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 				</h2>
 				<h2 class="content__title no-select">
 					<span class="content__title-sub">Vì món quà vô giá...là cho mình một động lực để thay đổi</span>
-					<span class="content__title-sub">Và cho phép mình được bên bạn lần nữa♥ (31->+∞)</span>
+					<span class="content__title-sub"> (31->+∞)</span>
 				</h2>
 			</div>
 		</main>
