--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 					<span>Cảm ơn PHƯƠNG</span>
 				</h2>
 				<h2 class="content__title no-select">
-					<span class="content__title-sub">Vì món quà vô giá...là cho mình một động lực để thay đổi                 .</span>
+					<span class="content__title-sub">Vì món quà vô giá...là cho mình một động lực để thay đổi           r</span>
 					<span class="content__title-sub"> Và cho phép mình được bên bạn lần nữa♥ </span>
 				</h2>
 			</div>
