--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 					<span>Cảm ơn PHƯƠNG</span>
 				</h2>
 				<h2 class="content__title no-select">
-					<span class="content__title-sub">Vì món quà vô giá...là cho mình một động lực để thay đổi<br>(31->+∞)Và cho phép mình được bên bạn lần nữa♥</span>
-					<span class="content__title-sub">  </span>
+					<span class="content__title-sub">Vì món quà vô giá...là cho mình một động lực để thay đổi<br />(31->+∞)Và cho phép mình được bên bạn lần nữa♥</span>
+					<span class="content__title-sub"></span>
 				</h2>
 			</div>
 		</main>
