--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 					<span>Cảm ơn PHƯƠNG</span>
 				</h2>
 				<h2 class="content__title no-select">
-					<span class="content__title-sub">Vì đã là món quà vô giá và nguồn động lực to bự cho mình♥(31->+∞)</span>
-					<span class="content__title-sub"></span>
+					<span class="content__title-sub">Vì đã là món quà vô giá và nguồn động lực to bự cho mình♥</span>
+					<span class="content__title-sub">(31->+∞)</span>
 				</h2>
 			</div>
 		</main>
