--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>mình thương bạn rất nhiều♥</title>
+		<title>mình thương bạn rất nhiều♥(31->+∞)</title>
 		<link rel="shortcut icon" href="./rose.png">
 		<link rel="stylesheet" href="https://use.typekit.net/eqx3jwb.css">
 		<link rel="stylesheet" type="text/css" href="./style.css">
@@ -40,7 +40,7 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
 				</h2>
 				<h2 class="content__title no-select">
 					<span class="content__title-sub">Vì đã là món quà vô giá và nguồn động lực to bự cho mình♥</span>
-					<span class="content__title-sub">(31->+∞)</span>
+					<span class="content__title-sub">31->+∞</span>
 				</h2>
 			</div>
 		</main>
